--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,19 @@
+@import "Sidebar.css";
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
 .App {
   font-family: sans-serif;
   text-align: center;
+  display: flex;
+  height: 100%;
+  color: rgba(189, 189, 192, 1);
+}
+
+#root {
+  height: 100vh;
 }
