--- a/public/Sidebar.css
+++ b/public/Sidebar.css
@@ -1,6 +1,12 @@
 .Sidebar {
   width: 80px;
   height: 100%;
-  border-right: 20px solid rgb(184, 178, 176);
-  transition: width 0.3s;
+  border-right: 1px solid rgb(189, 189, 192, 0.1);
+  transition: width 0.4s;
+}
+
+@media (min-width: 600px) {
+  .Sidebar {
+    width: 320px;
+  }
 }
